Fix Projects title spacing

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,13 +1,9 @@
-html {
-  height: 100%;
-}
 body {
-  height: 100%;
   margin: 0;
 }
 
 #root {
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
